# prophet

./: BUILD  MODULE.bazel  README.md  a.out  bazel-bin  bazel-out  bazel-prophet  bazel-testlogs  server.cc
data_dir/: bad_events.txt  blocked_cidr.txt  blocked_ips.txt  suspicious_users.txt
data_structures/: BUILD  ip_ranges.cc  ip_ranges.h  ip_ranges_test.cc  string_set.cc  string_set.h  trie.cc  trie.h
libs/: BUILD  event_logger.h  event_processor.cc  event_processor.h  logging.h  services.proto  suspicious_events_reader.h  suspicious_ips.cc  suspicious_ips.h  suspicious_users.cc  suspicious_users.h
